<resources>
    <string name="login_title">CFC App</string>
    <string name="logo">logo</string>
    <string name="title_family_detail">Family Detail</string>
    <string name="not_done">Not done</string>
    <string name="not_provided">Not provided</string>
    <string name="child_under_five">Child under 5 years</string>
    <string name="add_eligible_child">Eligible child</string>
    <string name="add_child_under_11">Add child under 11</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>
    <string name="due_today">Due Today</string>
    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="upcoming_services">Upcoming Services</string>
    <string name="overdue_3_oct">overdue(3 oct)</string>
    <string name="view_medical_history">View medical history</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="not_visiting_this_month">Not visiting this month</string>
    <string name="undo">UNDO</string>
    <string name="edit">EDIT</string>
    <string name="visit_not_done_btn_child_profile">Visit not done</string>
    <string name="medical_history">Medical History</string>
    <string name="fully_immunized_at_age">Fully immunized at age %1$s</string>
    <string name="add_date_separately">+ ADD DATE FOR EACH VACCINE</string>
    <string name="which_vaccines_given_text">Which vaccinations were done?</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="tab_text_1">DASHBOARD</string>
    <string name="tab_text_2">GUIDEBOOKS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="updating">Updating....</string>
    <string name="birth_certification">Birth certification</string>
    <string name="observations_illness_episodes"><![CDATA[Observations & Illness - <i>optional</i>]]></string>
    <string name="observations_illness_episodes_medical"><![CDATA[Observations & Illness Episodes]]></string>
    <string name="home_visit_suffix"> &#183; Home Visit</string>
    <string name="wash_check_suffix"> &#183; WASH check</string>
    <string name="family_kit_suffix"> &#183; Family Kit</string>
    <string name="last_visit_prefix">Last visit %1$s ago</string>
    <string name="completed_on_prefix">Completed on %1$s</string>
    <string name="profile_activity_completed">Completed on %s</string>
    <string name="interpunct">・</string>
    <string name="profile_activity_not_visited">Marked not visited on %s</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="dose_not_given">DOSE NOT GIVEN</string>
    <string name="has_birt_cert">Has birth certificate?</string>
    <string name="issuance_date">Issuance date</string>
    <string name="number">Number</string>
    <string name="notification">Birth notification done?</string>
    <string name="head_of_family">Head of family</string>
    <string name="birth_date">Birth Date</string>
    <string name="age">Age</string>
    <string name="edit_anc_registration_form_title">Edit ANC Registration</string>
    <string name="anc_registration_form_title">ANC Registration</string>
    <string name="anc_pregnancy_outcome_form_title">Pregnancy Outcome</string>
    <string name="birth_cert_value">Does the child have a birth certificate? %s</string>
    <string name="birth_cert_date">Birth certificate issuance date: %s</string>
    <string name="birth_cert_number">Birth certificate number: %s</string>
    <string name="birth_cert_notification">Was the birth notification done? %s</string>
    <string name="birth_cert_note_1">Ask to see the birth notification and instruct the caregiver to register the birth at County Health.</string>
    <string name="birth_cert_note_2">Instruct the caregiver to have the birth registered at County Health.</string>
    <string name="illness_date_with_value">Date: %s</string>
    <string name="illness_des_with_value">Description: %s</string>
    <string name="illness_action_value">Action taken: %s</string>
    <string name="initial_breastfeed_value">Early initiation breastfeeding: %s</string>
    <string name="zero_month_breastfeed_value">Exclusive breastfeeding 0 months: %s</string>
    <string name="vaccination_done_earlier">Vaccination done earlier</string>
    <string name="vaccines_not_done">VACCINES NOT DONE</string>
    <string name="set">Set</string>
    <string name="highest_education_level">Highest education level</string>
    <string name="anc_registration_info">ANC Registration info</string>
    <string name="anc_pregnancy_out_come">Pregnancy outcome</string>
    <string name="job_aids">Job Aids</string>
    <string name="refresh_indicators">Refresh indicators</string>
    <string name="indicators_udpating">Updating&#8230;</string>
    <string name="indicators_updating_complete">Update complete</string>
    <string name="total_under_5_children_label">Total U5 children</string>
    <string name="deceased_children_0_11_months">Children (0&#8211;11 months) who died in the last year</string>
    <string name="deceased_children_12_59_months">Children (12&#8211;59 months) who died in the last year</string>
    <string name="children_0_59_months_with_birth_certificate">Children (0&#8211;59 months) with a birth certificate</string>
    <string name="children_0_59_months_without_birth__certificate">Children (0&#8211;59 months) without a birth certificate </string>
    <string name="children_12_59_months_dewormed">Children (12&#8211;59 months) who were dewormed in the last 6 months</string>
    <string name="children_12_59_months_not_dewormed">Children (12&#8211;59 months) who were not dewormed in the last 6 months</string>
    <string name="children_6_59_months_received_vitamin_A">Children (6&#8211;59 months) who received Vitamin A in the last 6 months</string>
    <string name="children_6_59_months_not_received_vitamin_A">Children (6&#8211;59 months) who did not receive Vitamin A in the last 6 months</string>
    <string name="children_0_5_months_not_exclusively_breastfeeding">Children (0&#8211;5 months) not exclusively breastfeeding</string>
    <string name="children_0_5_months_exclusively_breastfeeding">Children (0&#8211;5 months) exclusively breastfeeding</string>
    <string name="children_6_23_months_upto_date_mnp">Children (6&#8211;23 months) up to date on MNP supplementation</string>
    <string name="children_6_23_months_overdue_mnp">Children (6&#8211;23 months) overdue on MNP supplementation</string>
    <string name="children_0_24_months_upto_date_vaccinations">Children (0&#8211;23 months) up to date on immunizations</string>
    <string name="children_0_24_months_overdue_vaccinations">Children (6&#8211;23 months) who are currently overdue for at least one or more vaccinations</string>
    <string name="total_under_2_children_label">Total U2 children</string>
    <string name="deceased_children_12_23_months">Children (12&#8211;23 months) who died in the last year</string>
    <string name="children_0_23_months_with_birth_certificate">Children (0&#8211;23 months) with a birth certificate</string>
    <string name="children_0_23_months_without_birth__certificate">Children (0&#8211;23 months) without a birth certificate </string>
    <string name="children_12_23_months_dewormed">Children (12&#8211;23 months) who were dewormed in the last 6 months</string>
    <string name="children_12_23_months_not_dewormed">Children (12&#8211;23 months) who were not dewormed in the last 6 months</string>
    <string name="children_6_23_months_received_vitamin_A">Children (6&#8211;23 months) who received Vitamin A in the last 6 months</string>
    <string name="children_6_23_months_not_received_vitamin_A">Children (6&#8211;23 months) who did not receive Vitamin A in the last 6 months</string>
    <string name="opv_0_not_included">OPV 0 not included</string>
    <string name="yes_slice_label">Yes</string>
    <string name="no_slice_label">No</string>
    <string name="immunisation_and_services"><![CDATA[IMMUNISATION & SERVICES]]></string>
    <string name="menu_labour_and_delivery"><![CDATA[L&D]]></string>
    <string name="menu_child">CH</string>
    <string name="menu_family_planing">Family Planning</string>
    <string name="menu_malaria">Malaria</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_services_due">No services are due</string>
    <string name="due_details">When a service becomes due for a family member, it will show up here.</string>
    <string name="counseled">Counseled : </string>
    <string name="not_counseled">Not counseled : </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_to_device_sync">Device-to-device Sync</string>
    <string name="anc_home_visit_danger_signs">Danger signs</string>
    <string name="anc_home_visit_facility_visit">ANC health facility visit</string>
    <string name="anc_home_visit_family_planning">Family planning</string>
    <string name="anc_home_visit_nutrition_status">Nutrition status</string>
    <string name="anc_home_visit_counselling_task">Counselling</string>
    <string name="anc_home_visit_malaria_prevention">Malaria prevention</string>
    <string name="anc_home_visit_observations_n_illnes">Observations &amp; illness</string>
    <string name="anc_home_visit_remarks_and_comments">Remarks / Comments</string>
    <string name="anc_home_visit_anc_card_received">ANC card received</string>
    <string name="anc_home_visit_sleeping_under_llitn_net">Sleeping under a LLITN</string>
    <string name="anc_home_visit_counseling">ANC counseling</string>
    <string name="anc_home_visit_tt_immunization">TT {0} immunization</string>
    <string name="anc_home_visit_iptp_sp">IPTp-SP dose {0}</string>
    <string name="gest_age">GA: %1$s</string>
    <string name="gest_age_weeks">weeks</string>
    <string name="action_taken">Action taken</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="mmHg">mmHg</string>
    <string name="hb_level">Hb level</string>
    <string name="gdl">g/dl</string>
    <string name="ifa_received">IFA received</string>
    <string name="tests_done">Tests done</string>
    <string name="treatment_given">Treatment given</string>
    <string name="received_llin">Received LLIN</string>
    <string name="nutrition_status">Status</string>
    <string name="counselling">Counselling</string>
    <string name="normal">Normal</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="okay">Okay</string>
    <string name="sbcc_location">Location: %s</string>
    <string name="sbcc_participants">Participants: %s</string>
    <string name="sbcc_session_date">Date: %s</string>
</resources>