<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_visit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anc_member_profile_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/record_visit_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="visible"
        android:weightSum="2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_record_visit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@drawable/record_btn_anc_selector"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="Teeeeeest"
            android:textColor="@color/anc_member_profile_bg" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_anc_visit_not"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/record_btn_selector_above_twentyfr"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/visit_not_done_btn_child_profile"
            android:textColor="@color/dark_grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_reccuringvisit_done_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:weightSum="2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_record_reccuring_visit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@drawable/record_btn_anc_recurringselector"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/record_anc_visit"
            android:textColor="@color/black" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/record_visit_done_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/anc_member_profile_bg"
        android:padding="10dp"
        android:visibility="gone">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/record_visit_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/anc_member_profile_bg"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/tick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/childrow_upcoming" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_not_visit_this_month"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/textview_undo"
            android:layout_toRightOf="@+id/tick_image"
            android:padding="10dp"
            android:text="@string/not_visiting_this_month"
            android:textColor="@color/black" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_undo"
            style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/undo"
            android:textColor="@color/primary" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_edit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/edit"
            android:textColor="@color/primary"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:id="@+id/view_record"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/light_grey" />

</LinearLayout>