<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rlSbccSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_sbcc_session"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/sidemenu_updates_active"
            android:contentDescription="sbcc session"/>


        <LinearLayout
            android:id="@+id/sbcc_session_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sbcc_session_title"
            android:layout_toEndOf="@id/iv_sbcc_session">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/sbcc_session_location"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:ellipsize="none"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/sbcc_location" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/sbcc_session_date"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:ellipsize="none"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="visible"
                tools:text="@string/sbcc_session_date" />

        </LinearLayout>

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/sbcc_session_title"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_sbcc_session"
            android:gravity="center_horizontal"
            android:text="SBCC Session"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/sbcc_session_participants"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sbcc_session_details"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/iv_sbcc_session"
            android:layout_toRightOf="@+id/child_followup_image"
            android:ellipsize="none"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="visible"
            tools:text="@string/sbcc_participants" />


    </RelativeLayout>

    <View
        android:id="@+id/view_child_followup_row"
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:layout_below="@id/rlSbccSession"
        android:layout_marginTop="6dp"
        android:background="@color/light_grey"
        android:visibility="visible" />
</RelativeLayout>