<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.smartregister.chw.activity.JobAidsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/ChwTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/customAppThemeBlue"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/FamilyTheme.PopupOverlay">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_detail_two"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:text="@string/job_aids"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/refreshIndicatorsLayout"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/refreshIndicatorsIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:contentDescription="Refresh indicators"
                    android:focusable="true"
                    app:srcCompat="@mipmap/sidemenu_sync" />

                <ProgressBar
                    android:id="@+id/refreshIndicatorsPB"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:indeterminate="true" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="#E2E363"
            app:tabIndicatorHeight="6dp"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/CustomFontTextViewStyle.tabIndicator.sub.white">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|fill_horizontal"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/bottom_nav_bar_background"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:menu="@menu/bottom_nav_family_menu" />

</android.support.design.widget.CoordinatorLayout>
